tests/parsing/icnf/errors/004_clause_bad_atom_1.icnf
p inccnf
1 p
