tests/parsing/icnf/errors/004_clause_bad_atom_1.expected
File "tests/parsing/icnf/errors/004_clause_bad_atom_1.icnf", line 2, character 2-3:
2 | 1 p
      ^
Error while parsing a clause, read the keyword 'p',
      but expected either another atom (i.e. non-zero integer), or the
      integer zero to close the clause.
